# flight-passport

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_locally.sh  docker-compose.yml  entrypoint-prod.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: linting.yml
allauth/templates/allauth/account/: login.html
authprofiles/: adapter.py  forms.py  models.py  oauth_validators.py  scopes.py
authprofiles/migrations/: 0006_passportapplication_subject.py
flight_passport/: settings.py  urls.py
oauth2_provider_jwt/: authentication.py  utils.py  views.py
rolepermissions/: __init__.py  admin.py  checkers.py  decorators.py  exceptions.py  loader.py  mixins.py  permissions.py  roles.py  utils.py
rolepermissions/management/commands/: sync_roles.py
rolepermissions/templatetags/: permission_tags.py
rolepermissions/tests/: mock_urls.py  test_admin.py  test_decorators.py  test_mixins.py  test_permissions.py  test_roles.py  test_shortcuts.py  test_template_tags.py  test_verifications.py
vault/: jwt_utils.py  views.py
vault/management/commands/: init_admin.py
vault/templates/: passport_homepage.html  profile.html
